--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,16 +18,29 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+#input_video {
+  display: none;
+}
+
+#output_canvas,
+#threejs_canvas {
+  background-color: transparent;
+  top: 0px;
+  margin: auto;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  margin: auto;
+  transform: scaleX(-1);
 }
