--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,11 +36,8 @@ body {
 .container {
   display: flex;
   justify-content: center;
-  /* Center the canvas horizontally */
   overflow: hidden;
-  /* Hide the overflow caused by the canvas being wider */
-  width: 100%;
-  /* Set the parent width as needed */
+  width: 100vw !important;
 }
 
 #output_canvas,
@@ -65,6 +62,7 @@ body {
   position: absolute;
   width: 100vw;
   height: auto;
+  /* display: none; */
 }
 
 @media screen and (max-width: 1280px) {
