--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,19 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -23,11 +10,6 @@ body {
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
 
 #input_video {
   display: none;
@@ -68,7 +50,7 @@ body {
 @media screen and (max-width: 1280px) {
   .intermediary_canvas {
     position: fixed;
-    width: auto;
-    height: 100vh;
+    width: 100vw;
+    height: auto;
   }
 }
